--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,30 +5,52 @@ main{
     background-color: #F2F0EB;
 }
 
+section{
+    scroll-margin-top: 100px;
+}
+
+/* HOME */
+
+#inicio{
+    background-image: url('../img/background-attachment.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 700px;
+}
+
 .splide__slide img {
     width: 100%;
     height: auto;
 }
 
-.conheca{
+.produtos, .colecoes{
     padding: 50px;
     background-color: #F2F0EB;
 }
 
-.conheca .section-title h2{
+.produtos .section-title h2,
+.colecoes .section-title h2,
+.personalizar .section-title h2{
     color: #403A20;
 }
+
+.destaques{
+    background-color: #1E3259;
+    padding: 50px;
+}
+
+.destaques .section-title h2,
+.sobre .section-title h1,
+.vantagens-container .section-title h2{
+    color: #F2F0EB;
+}
+
 
 .section-title{
     text-align: center;
     font-family: "Young Serif", Arial, Helvetica, sans-serif;
     margin-bottom: 3rem;
-}
-
-.container-produtos{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
 }
 
 .splide__pagination {
@@ -68,13 +90,16 @@ main{
     transition: .3s;
 }
 
-.destaques{
-    background-color: #1E3259;
-    padding: 50px;
+.btn-orange{
+    border-color: #F2921D;
+    background-color: #F2921D;
+    transition: .3s;
 }
 
-.destaques .section-title h2{
-    color: #F2F0EB;
+.btn-orange:hover{
+    background-color: #faa237;
+    border-color: #faa237;
+    transition: .3s;
 }
 
 .card-text{
@@ -83,4 +108,256 @@ main{
 
 .text-default{
     color: #757575;
+}
+
+/* SOBRE */
+
+#sobre{
+    display: block;
+    padding: 50px;
+    background-color: #1E3259;
+    text-align: justify;
+}
+
+.sobre-container{
+    display: flex;
+    justify-content: space-between;
+    gap: 2%;
+}
+
+.text-container{
+    max-width: 60% !important;
+}
+
+.sub-title-sobre{
+    color: #F2921D ;
+    text-align: justify;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.text-sobre{
+    font-size: 20px;
+    color: #F2F0EB;
+    font-weight: lighter;
+    text-align: justify;
+    margin-bottom: 2rem;
+
+}
+
+.img-sobre{
+    display: block;
+    height: 400px;
+    position: relative;
+}
+
+.foto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #F4F9E9;
+    border-radius: 100%;
+    width: 400px;
+    height: 400px;
+    background-image: url('../img/img-sobre.jpg');
+    background-size: contain;
+    box-shadow: 10px 10px 10px #0000006e;
+}
+
+.vantagens-container{
+    background-color: #403A20;
+    padding: 50px;
+    display: block;
+}
+
+.vantagens-cards{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 40px;
+    color: #F2F0EB;
+    flex-wrap: wrap;
+}
+
+.vantagens-cards div{
+    max-width: 320px;
+}
+
+.flex{
+    height: auto;
+}
+
+.w-16{
+    margin: 0 !important;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-circle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    height: 70px;
+    width: 70px;
+    background-color: #f2921d46;
+    margin: 0 auto;
+    margin-bottom: 1.5rem;
+}
+
+.icon-circle i{
+    font-size: 2rem;
+    color: #F2921D;
+}
+
+.text-cream{
+    color: #f2f0ebb6;
+}
+
+/* PERSONALIZAR */
+
+.personalizar{
+    padding: 50px 50px 0 50px;
+}
+
+.text-personalizar{
+    font-size: 18px;
+    text-align: center;
+    margin: 0 10rem;
+}
+
+.text-personalizar a{
+    text-decoration: none;
+    color: #F2921D;
+    font-weight: bold;
+}
+
+/* CONTATO */
+
+.section-contato{
+    display: inline-flex;
+    padding: 0 50px 50px 50px;
+    background-color: #F2F0EB;
+}
+
+.contato{
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    margin: 80px;
+    
+    
+    h3, h5{
+        text-align: justify;
+    }
+
+    h5{
+        color: #403A20;
+        font-weight: bold;
+    }
+
+    h3{
+        color: #021F59;
+    }
+}
+
+.form-cli{
+    display: inline-block;
+    align-items: center;
+    margin-left: auto;
+    margin-left: auto;
+    margin-top: 100px;
+}
+
+.form-contato{
+    display: flexbox;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+.form-group{
+    width: 300px;
+
+    input{
+        border-color: #000;
+    }
+
+    textarea{
+        border-color: #000;
+    }
+}
+
+.form-control-contato{
+    width: 800px;
+    border: solid 1px #00000081;
+    border-radius: 5px;
+    padding: 6px;
+}
+
+.list-contato-container{
+    padding: 0;
+}
+
+.list-contato{
+    display: block;
+    list-style-type: none;
+    text-align: justify;
+    margin: 25px 0;
+
+    a{
+        text-decoration: none;
+        color: #757575;
+        text-align: justify;
+
+        img{
+            width: 18px;
+            margin-right: 16px;
+        }
+    }
+
+    a:hover{
+        color: #000;
+    }
+
+    
+    
+}
+
+.list-contato i{
+    color: #403A20;
+    margin-right: 10px;
+    padding: 12px;
+    background-color: #403a2028;
+    border-radius: 100%;
+}
+
+.btn-primary-enviar{
+    margin-top: 20px;
+    border-style: none;
+    color:#021F59;
+    border-radius: 10px;
+    padding: 5px;
+    border-style:solid;
+    border-color: #021F59;
+    transition: 0.3s;
+    cursor: pointer;
+    width: 800px;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.btn-primary-enviar:hover{
+    background-color: #021F59;
+    color: #F2F0EB;
+    transition: 0.3s;
+}
+
+.modal-content{
+    padding: 30px;
+}
+
+.modal-text{
+    padding-left: 16px;
+    text-align: left;
 }
