--- a/velas/templates/base.html
+++ b/velas/templates/base.html
@@ -31,38 +31,28 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-header">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-header fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'img/logo balm.jpg' %}" alt="Logo"></a>
+                <a class="navbar-brand" href="#image-carousel"><img src="{% static 'img/logo balm.jpg' %}" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 list-itens">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Início</a>
+                            <a class="nav-link active" aria-current="page" href="#inicio">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'sobre' %}">Quem Somos</a>
+                            <a class="nav-link" href="#produtos">Produtos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'personalizar' %}">Tudo Personalizável</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                            Produtos
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Velas</a></li>
-                                <li><a class="dropdown-item" href="#">Aromatizadores</a></li>
-                                <li><a class="dropdown-item" href="#">Difusores</a></li>
-                                <li><a class="dropdown-item" href="#">Sabonetes</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#">Personalize o seu pedido!</a></li>
-                            </ul>
+                            <a class="nav-link" href="#sobre">Quem Somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'contato' %}">Contato</a>
+                            <a class="nav-link" href="#personalizar">Personalize</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contato">Contato</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
